exports[`arrayOfMedia should match the normalizr-arrayOfTag-schema 1`] = `
ArraySchema {
  "schema": EntitySchema {
    "_getId": [Function],
    "_idAttribute": "id",
    "_key": "tags",
    "_mergeStrategy": [Function],
    "_processStrategy": [Function],
    "schema": Object {
      "processStrategy": [Function],
    },
  },
}
`;

exports[`tag schema should match the normalizr-tag-schema 1`] = `
EntitySchema {
  "_getId": [Function],
  "_idAttribute": "id",
  "_key": "tags",
  "_mergeStrategy": [Function],
  "_processStrategy": [Function],
  "schema": Object {
    "processStrategy": [Function],
  },
}
`;
